set a fixed height for the city image wrapper so the page doesn't jump if img is less than 200px

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -212,6 +212,9 @@ margin-bottom: 10px;
   padding-right: 25px;
   padding-top: 10px;
 }
+.leftColumn > #infocarddiv > .wrapper:nth-child(3) {
+  height:200px;
+}
 #cityfacts {
   padding-top: 8px;
 }
